Fixing the minimum hight on each subscription element to stop ui issues with overlapping.

--- a/Frontend/pages/Index/css/index.scss
+++ b/Frontend/pages/Index/css/index.scss
@@ -180,6 +180,7 @@ h2 {
 		padding: 2.5em;
 		width: 90%;
 		height: 75vh;
+		min-height: 1750px;
 		border-radius: 1em;
 		box-shadow: 0 0.25em 0.5em 0 #4f4f4f;
 		img {
